src/test/resources/typeSystemTestModels/invalid/expressions/ArrayCreator.java
package typeSystemTestModels.invalid.expressions;

import java.util.ArrayList;
import java.util.List;

public class ArrayCreator {

  List<String> s = new ArrayList<String>[10];
}